# faustpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE-EXCEPTION.md  Makefile  README.md  call_faust.cpp  call_faust.h  faustpp.rpkg.spec  main.cpp  messages.h  metadata.cpp  metadata.h  pyproject.toml  rpkg.macros  run-faustpp.py  setup.cfg
architectures/: example.cpp  example.hpp  generic.cpp  generic.hpp  jack_simple.cpp  oversampled.cpp  oversampled.hpp
docs/: index.html
docs/manual/: Makefile
docs/manual/en/: Makefile  manual.html  manual.txt
examples/: CMakeLists.txt  Makefile  hardclip.dsp  osctriangle.dsp  stone_phaser.dsp  stone_phaser_stereo.dsp
faustpp/: __init__.py  call_faust.py  main.py  metadata.py  render.py  utility.py
faustpp/architectures/: oversampled.cpp  oversampled.hpp
