[metadata]
name = faustpp
version = 1.0.0
description = A post-processor for faust, which allows to generate with more flexibility.

[options]
packages = faustpp
install_requires =
    Jinja2

[options.entry_points]
console_scripts =
    faustpp = faustpp.main:main

[options.package_data]
faustpp = architectures/*
